id:117549 fixed participation bug for guest view on mobile devices

--- a/app/Resources/sass/modules/_meal.scss
+++ b/app/Resources/sass/modules/_meal.scss
@@ -146,6 +146,11 @@
   .wrapper-vertical-center {
     right: 0;
     width: 18%;
+
+    @include breakpoint(small) {
+      width: 30%;
+    }
+
   }
 
   &.is-available {
